<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="402dp"
        android:layout_height="202dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.771"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_toStartOf="@id/imageView"
            android:layout_toLeftOf="@id/imageView"
            android:fontFamily="sans-serif"
            android:text="@string/titulo_Principal"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="106dp"
            android:layout_height="81dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="11dp"
            android:src="@mipmap/logo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleTextView2"
            android:layout_width="209dp"
            android:layout_height="49dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="69dp"
            android:fontFamily="sans-serif"
            android:text="@string/subtitulo_Principal"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/humidityProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="408dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_circular"
        android:indeterminate="false"
        android:max="100"
        android:progressDrawable="@drawable/ic_circular_progress_bar"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/humidityProgressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/ic_humidity"
            tools:ignore="VectorDrawableCompact"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/humidityTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/humedad"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"/>
            <TextView
                android:id="@+id/tittleHumidityTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_humedad"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="24sp"/>
        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>